# insta-salesbot

./: .gitignore  README.md  main.py  pyproject.toml
bakery-mcp/: mcp_server.py
bakery_mcp/: .env.example  mcp_server.py
bakery_mcp/tools/: customer_order_parser.py  knowledge.py  order_manager.py  product_manager.py
insta-bot/: PROMPTS.md  agent_bakery_assistant.py  agent_insta_manager.py  agent_insta_mcp.py  agent_one.py  agent_two.py  fastagent.config.yaml  fastagent.secrets.yaml.example
insta-mcp/: .env.example  README.md  mcp_server.py
insta_bot/: agent_bakery_assistant.py  agent_insta_manager.py  fastagent.config.yaml
insta_mcp/: mcp_server.py
